--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -2,11 +2,27 @@
 phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
 includePaths.library = APPLICATION_PATH "/../library"
+
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
+
 appnamespace = "Application"
-resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
-resources.frontController.params.displayExceptions = 0
+
+
+;-------------------------------------------------------------------------------
+resources.modules[] =
+resources.frontController.defaultModule = "default"
+resources.frontController.defaultControllerName = "index"
+resources.frontController.defaultAction = "index"
+resources.frontController.params.prefixDefaultModule = "1"
+resources.frontController.env = APPLICATION_ENV
+resources.frontController.params.prefixDefaultModule = "1"
+resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
+
+;----------------------------------------------------------------------------------
+; Layout
+resources.layout.layout = "layout"
+;----------------------------------------------------------------------------------
 
 [staging : production]
 
