incluido: - Login - cadastro - layouts

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -6,8 +6,15 @@ includePaths.library = APPLICATION_PATH "/../library"
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
 
-appnamespace = "Application"
+;-------------------------------------------------------------------------------
+; Diretorio dos Resources do sistema
+pluginPaths.My_Application_Resource = APPLICATION_PATH "/../library/My/Application/Resource"
 
+;-------------------------------------------------------------------------------
+; Namespaces
+appnamespace = "Application"
+autoloaderNamespaces[] = "My"
+autoloaderNamespaces[] = "ZendX"
 
 ;-------------------------------------------------------------------------------
 resources.modules[] =
@@ -19,10 +26,41 @@ resources.frontController.env = APPLICATION_ENV
 resources.frontController.params.prefixDefaultModule = "1"
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 
+resources.frontController.plugins[] = "My_Controller_Plugin_Internationalization"
+
 ;----------------------------------------------------------------------------------
 ; Layout
-resources.layout.layout = "layout"
+resources.layout.layout = "layout/layout3/layout"
+
 ;----------------------------------------------------------------------------------
+; Views
+resources.view.encoding = "ISO-8859-1"
+resources.view.basePath = APPLICATION_PATH "/views/"
+resources.view.helperPath.My_View_Helper = APPLICATION_PATH "/../library/My/View/Helper"
+;resources.view.helperPath.ZendX_JQuery_View_Helper = APPLICATION_PATH "/../library/ZendX/JQuery/View/Helper"
+
+;-------------------------------------------------------------------------------
+resources.locale.default = "pt"
+resources.translate.adapter = "array"
+resources.translate.options.disableNotices = true
+;resources.locale.force = true
+resources.translate.data = APPLICATION_PATH "/../data/locales"
+resources.translate.scan = "directory"
+
+;-------------------------------------------------------------------------------
+; Database
+resources.db.adapter = MYSQLI
+resources.db.params.host = localhost
+resources.db.params.username = root
+resources.db.params.password = ""
+resources.db.params.dbname = guitarprime
+resources.db.isDefaultTableAdapter = true
+
+;-------------------------------------------------------------------------------
+; Log setup
+resources.log.life_time = 30            ;Tempo(em dias) de vida dos arquivos em Log
+resources.log.directory = log           ;Diretorio dos arquivos de log (tendo com pasta base: /public)
+;-------------------------------------------------------------------------------
 
 [staging : production]
 
