--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -58,8 +58,8 @@ resources.db.isDefaultTableAdapter = true
 
 ;-------------------------------------------------------------------------------
 ; Log setup
-resources.log.life_time = 30            ;Tempo(em dias) de vida dos arquivos em Log
-resources.log.directory = log           ;Diretorio dos arquivos de log (tendo com pasta base: /public)
+;resources.log.life_time = 30            ;Tempo(em dias) de vida dos arquivos em Log
+;resources.log.directory = log           ;Diretorio dos arquivos de log (tendo com pasta base: /public)
 ;-------------------------------------------------------------------------------
 
 [staging : production]
