add blog controller config phpstorm database connection

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -30,7 +30,7 @@ resources.frontController.plugins[] = "My_Controller_Plugin_Internationalization
 
 ;----------------------------------------------------------------------------------
 ; Layout
-resources.layout.layout = "layout/layout3/layout"
+resources.layout.layout = "layout/layout1/layout"
 
 ;----------------------------------------------------------------------------------
 ; Views
@@ -50,9 +50,9 @@ resources.translate.scan = "directory"
 ;-------------------------------------------------------------------------------
 ; Database
 resources.db.adapter = MYSQLI
-resources.db.params.host = localhost
+resources.db.params.host = 127.0.0.1
 resources.db.params.username = root
-resources.db.params.password = ""
+resources.db.params.password = "senha"
 resources.db.params.dbname = guitarprime
 resources.db.isDefaultTableAdapter = true
 
