--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -25,12 +25,12 @@ resources.frontController.params.prefixDefaultModule = "1"
 resources.frontController.env = APPLICATION_ENV
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 
-resources.frontController.plugins[] = "My_Controller_Plugin_Auth"         ;Plugin que verifica se o usuário já está logado
+;resources.frontController.plugins[] = "My_Controller_Plugin_Auth"         ;Plugin que verifica se o usuário já está logado
 resources.frontController.plugins[] = "My_Controller_Plugin_Internationalization"
 
 ;----------------------------------------------------------------------------------
 ; Layout
-resources.layout.layout = "layout/layout3/layout"
+resources.layout.layout = "layout/layout4/layout"
 
 ;----------------------------------------------------------------------------------
 ; Views
