- alteração em view helpers - crud admin/user

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -30,7 +30,7 @@ resources.frontController.plugins[] = "My_Controller_Plugin_Internationalization
 
 ;----------------------------------------------------------------------------------
 ; Layout
-resources.layout.layout = "layout/layout4/layout"
+resources.layout.layout = "layout/layout3/layout"
 
 ;----------------------------------------------------------------------------------
 ; Views
@@ -52,7 +52,7 @@ resources.translate.scan = "directory"
 resources.db.adapter = MYSQLI
 resources.db.params.host = 127.0.0.1
 resources.db.params.username = root
-resources.db.params.password = "senha"
+resources.db.params.password = ""
 resources.db.params.dbname = guitarprime
 resources.db.isDefaultTableAdapter = true
 
