- incluido login admin  - incluido menu admin

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -25,7 +25,7 @@ resources.frontController.params.prefixDefaultModule = "1"
 resources.frontController.env = APPLICATION_ENV
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 
-;resources.frontController.plugins[] = "My_Controller_Plugin_Auth"         ;Plugin que verifica se o usuário já está logado
+resources.frontController.plugins[] = "My_Controller_Plugin_Auth"         ;Plugin que verifica se o usuário já está logado
 resources.frontController.plugins[] = "My_Controller_Plugin_Internationalization"
 
 ;----------------------------------------------------------------------------------
