- incluido category admin  - incluido sub-category admin

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -60,8 +60,14 @@ resources.db.isDefaultTableAdapter = true
 ; Log setup
 ;resources.log.life_time = 30            ;Tempo(em dias) de vida dos arquivos em Log
 ;resources.log.directory = log           ;Diretorio dos arquivos de log (tendo com pasta base: /public)
-;-------------------------------------------------------------------------------
 
+;-------------------------------------------------------------------------------
+; Session
+resources.session.name = GUITARPRIME
+;resources.session.save_path = session
+;resources.session.remember_me_seconds = 7200
+
+;-------------------------------------------------------------------------------
 [staging : production]
 
 [testing : production]
