- incluido autor do pacote - incluido tag no pacote

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -52,7 +52,7 @@ resources.translate.scan = "directory"
 resources.db.adapter = MYSQLI
 resources.db.params.host = 127.0.0.1
 resources.db.params.username = root
-resources.db.params.password = ""
+resources.db.params.password = "senha"
 resources.db.params.dbname = guitarprime
 resources.db.isDefaultTableAdapter = true
 
