- incluido file - correções no delete modal

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -24,9 +24,9 @@ resources.frontController.defaultAction = "index"
 resources.frontController.params.prefixDefaultModule = "1"
 resources.frontController.env = APPLICATION_ENV
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
-
 resources.frontController.plugins[] = "My_Controller_Plugin_Auth"         ;Plugin que verifica se o usuário já está logado
 resources.frontController.plugins[] = "My_Controller_Plugin_Internationalization"
+resources.frontController.actionhelperpaths.My_Controller_Action_Helper = APPLICATION_PATH "/../library/My/Controller/Action/Helper"
 
 ;----------------------------------------------------------------------------------
 ; Layout
@@ -52,7 +52,7 @@ resources.translate.scan = "directory"
 resources.db.adapter = MYSQLI
 resources.db.params.host = 127.0.0.1
 resources.db.params.username = root
-resources.db.params.password = "senha"
+resources.db.params.password = ""
 resources.db.params.dbname = guitarprime
 resources.db.isDefaultTableAdapter = true
 
